microsetta_interface/static/css/minimal_interface.css
/* ... */
.tip-title {
    margin-left: 8px;
    color: white;
    font-weight: 700;
}

.tip-contact {
    font-size: 14px;
    line-height: 24px;
}

.tip-modal-footer {
    justify-content: space-between !important;
}

#system_message {
    margin-left: 1rem;
    margin-right: 1rem;
}

.orange-text {
    color: var(--tmi-orange);
}

@media (min-width: 576px) {
    .report-nav-container {
        position: relative;
        max-width: 1280px;
        margin-left: auto;
        margin-right: auto;
    }

    #profile-kebab-dropdown {
        margin-top: 58px;
        border: 1px solid var(--tmi-gray-70);
        border-radius: 5px;
        width: 40px;
        height: 40px;
    }
}

@media (max-width: 1280px) {
    .report-nav-container {
        position: relative;
        max-width: 1280px;
        margin-left: auto;
        margin-right: auto;
    }

    #profile-kebab-dropdown {
        margin-top: 24px;
        border: 1px solid var(--tmi-gray-70);
        border-radius: 5px;
        width: 40px;
        height: 40px;
    }
}

.report-nav {
    position: relative;
}

.report-nav::before {
    content: '';
    position: relative;
    top: 56px;
    bottom: 0;
    left: 0;
    right: 0;
    width: 1280px;
    background: var(--tmi-gray-60);
    flex-shrink: 0;
    height: 8px;
    border-radius: 100px;
    z-index: 1;
}

.report-nav > .nav-item {
    width: 220px;
    text-align: center;
    align-items: center;
    font-size: 24px;
    line-height: 40px;
    background-color: white;
    display: flex;
    flex-direction: column;
}

@media (max-width: 575.98px) {
    .report-nav > .nav-item {
        text-align: left;
        padding-left: 12px;
    }
}

.report-nav > .nav-item > a {
    color: var(--tmi-gray-80);
}

.report-nav > .nav-item > .active {
    background-color: white;
    color: var(--tmi-gray-90);
    position: relative;
}

.report-nav > .nav-item > .active:after {
    content: '';
    position: relative;
    background: var(--tmi-light-blue);
    width: 220px;
    height: 8px;
    border-radius: 10px;
    z-index: 2;
    flex-direction: column;
    align-items: center;
    display: flex;
}

@media (max-width: 1280px) {
    .report-nav > .nav-item {
        display: block;
        width: 100%;
        text-align: left;
    }

    .report-nav::before {
        display: none;
    }

    .report-nav > .nav-item > .active:after {
        content: '';
        position: relative;
        background: var(--tmi-light-blue);
        width: 220px;
        height: 8px;
        border-radius: 10px;
        z-index: 2;
        flex-direction: column;
        align-items: center;
        display: flex;    }

    .navbar-toggler.nav-toggle::after {
        display: none;
    }
}

.report-text {
    text-align: left;
    max-width: 1280px;
    margin-left: auto;
    margin-right: auto;
}

.breadcrumb-container {
    width: 1280px;
    margin-left: auto;
    margin-right: auto;
    display: flex;
}

.nav-toggle-report {
    width: 190px;
    text-align: center;
    font-size: 24px;
    line-height: 40px;
    background-color: white;
    color: var(--tmi-gray-80);
    display: flex;
    justify-content: space-between;
}

.nav-toggle-report:after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background: var(--tmi-light-blue);
    height: 8px;
    border-radius: 4px 4px 4px 4px;
    width: 190px;
}
@media (min-width: 1280px){
    .navbar-expand-custom {
        flex-direction: row;
        flex-wrap: nowrap;
        justify-content: flex-start;
    }
    .navbar-expand-custom .navbar-nav {
        flex-direction: row;
    }
    .navbar-expand-custom .dropdown-menu {
        position: absolute;
    }
    .navbar-expand-custom .nav-link {
        padding-right: .5rem;
        padding-left: .5rem;
    }
    .navbar-expand-custom > .container {
        flex-wrap: nowrap;
    }
    .navbar-expand-custom .navbar-collapse {
        display: flex!important;
        flex-basis: auto;
    }
    .navbar-expand-custom .navbar-toggler {
        display: none;
    }
}

